# torii

./: .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.grafana.yml  external_contracts.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: Dockerfile
.github/workflows/: build-and-push-devcontainer.yml  ci.yml  custom-release.yml  devcontainer.yml  docs-sync.yml  release-dispatch.yml  release.yml  test.yml
crates/adigraphmap/: Cargo.toml
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs  memory.rs  redis.rs  test.rs  types.rs
crates/cache/: Cargo.toml
crates/cache/src/: error.rs  lib.rs
crates/cache/src/inmemory/: mod.rs
crates/cache/src/query_cache/: cached_row.rs  in_memory.rs  key.rs  mod.rs  redis.rs  tiered.rs
crates/cli/: Cargo.toml
crates/cli-macros/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: error.rs  lib.rs
crates/client/src/client/: error.rs  mod.rs
crates/controllers/: Cargo.toml
crates/controllers/src/: error.rs  lib.rs  sync.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: constants.rs  lib.rs  mapping.rs  pagination.rs  schema.rs  server.rs  utils.rs
crates/graphql/src/object/: controller.rs  entity.rs  event.rs  event_message.rs  mod.rs  model.rs  model_data.rs  publish_message.rs  transaction.rs
crates/graphql/src/object/connection/: edge.rs  mod.rs  page_info.rs
crates/graphql/src/object/erc/: erc_token.rs  mod.rs  token_balance.rs  token_transfer.rs
crates/graphql/src/object/inputs/: keys_input.rs  order_input.rs  where_input.rs
crates/graphql/src/object/metadata/: mod.rs
crates/graphql/src/playground/: graphiql.rs  graphiql_plugin.rs  graphiql_source.hbs  mod.rs
crates/graphql/src/query/: data.rs  filter.rs  mod.rs
crates/graphql/src/tests/: entities_test.rs  events_test.rs  metadata_test.rs  mod.rs  models_ordering_test.rs  models_test.rs  publish_message_test.rs  subscription_test.rs
crates/grpc/: Cargo.toml
crates/grpc/client/: Cargo.toml  build.rs
crates/grpc/client/src/: lib.rs
crates/grpc/server/: Cargo.toml  build.rs
crates/grpc/server/src/: lib.rs
crates/grpc/server/src/subscriptions/: achievement.rs  activity.rs  aggregation.rs  contract.rs  dispatcher.rs  entity.rs  error.rs  event.rs  event_message.rs  indexer.rs  mod.rs  token.rs  token_balance.rs  token_transfer.rs  transaction.rs
crates/grpc/server/src/tests/: entities_test.rs  messaging.rs  mod.rs
crates/grpc/types/: Cargo.toml
crates/grpc/types/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/types/: Cargo.toml
crates/indexer/types/src/: lib.rs
crates/libp2p/: Cargo.toml
crates/libp2p/client/: Cargo.toml
crates/libp2p/client/src/: error.rs  events.rs  lib.rs  test.rs
crates/libp2p/relay/: Cargo.toml
crates/libp2p/relay/src/: error.rs  events.rs  lib.rs  mapping.rs
crates/libp2p/types/: Cargo.toml
crates/libp2p/types/src/: lib.rs
crates/math/: Cargo.toml
crates/mcp/: Cargo.toml
crates/messaging/: Cargo.toml
crates/messaging/src/: entity.rs  error.rs  lib.rs  parsing.rs  validation.rs
crates/migrations/: 20241124_add_receipt_json.sql  20250410133000_add_total_supply.sql  20250519093120_transaction_models.sql  20250604065149_pending_txn_event.sql  20250613074132_last_pending_block_tx.sql  20250815014815_model_legacy_store.sql  20250909141655_contracts_updated_at.sql  20250909165000_add_traits_column.sql  20250909170000_create_token_attributes.sql  20250917134353_token_indexes.sql  20250929200330_leaderboard.sql  20250930000001_optimize_entity_queries.sql  20251001183004_create_activities_table.sql  20251007145139_add_world_address_to_entities.sql  20251007150000_add_entity_id_column.sql  20251007151000_world_scoped_models.sql  20251008000001_create_achievements_tables.sql  20251020000001_create_fts5_search_tables.sql  20251021000001_unified_search_index.sql  20251124074446_recreate_transaction_receipts.sql  20251124215151_transaction_receipts.sql
crates/processors/: Cargo.toml
crates/processors/src/: constants.rs  erc.rs  error.rs  fetch.rs  lib.rs  metrics.rs  task_manager.rs
crates/processors/src/processors/: contract_uri_updated.rs  controller.rs  erc1155_legacy_transfer_batch.rs  erc1155_legacy_transfer_single.rs  erc1155_transfer_batch.rs  erc1155_transfer_single.rs  erc20_legacy_transfer.rs  erc20_transfer.rs  erc4906_batch_metadata_update.rs  erc4906_metadata_update.rs  erc721_legacy_transfer.rs  erc721_transfer.rs  erc7572_contract_uri_updated.rs  event_message.rs  external_contract_registered.rs  external_contract_upgraded.rs  metadata_update.rs  mod.rs  raw_event.rs  register_event.rs  register_external_contract.rs  register_model.rs  store_del_record.rs  store_set_record.rs  store_transaction.rs  store_update_member.rs  store_update_members.rs  store_update_record.rs  upgrade_event.rs  upgrade_model.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: types.proto  world.proto
crates/proto/src/: error.rs  lib.rs  schema.rs
crates/runner/: Cargo.toml
crates/runner/src/: constants.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: artifacts.rs  graphiql.rs  lib.rs  proxy.rs
crates/server/src/handlers/: artifacts.rs  graphql.rs  grpc.rs  mcp.rs  metadata.rs  mod.rs  sql.rs  static.rs  static_files.rs
crates/server/static/: graphiql_source.hbs
crates/sqlite/: Cargo.toml
crates/sqlite/types/: Cargo.toml
crates/sqlite/types/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  types.rs  utils.rs
crates/task-network/: Cargo.toml
crates/task-network/src/: error.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: error.rs  lib.rs
crates/typed-data/: Cargo.toml
docs/: grafana-setup.md
grafana/: prometheus.yml
migrations/: 20250909095621_tokens_timestamps.sql
scripts/: build_cairo_projects.sh  cairo_fmt.sh  clippy.sh  rebuild_test_artifacts.sh  rust_fmt.sh  selective_test.sh  setup_test_data.sh
xtask/generate-test-db/: Cargo.toml
xtask/generate-test-db/src/: main.rs
(+118 files in other folders)
