[workspace]
resolver = "2"

members = [
	"bin/torii",
	"crates/broker",
	"crates/cli",
	"crates/client",
	"crates/messaging",
	"crates/server",
	"crates/sqlite/types",
	"xtask/generate-test-db",
	"crates/task-network",
	"crates/storage",
	"crates/cache",
	"crates/math",
	"crates/controllers",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/torii"
version = "1.6.1-preview.2"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1" }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1" }
cainome-cairo-serde-derive = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1" }

# dojo
dojo-utils = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
dojo-world = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
dojo-test-utils = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
dojo-metrics = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
scarb-metadata-ext = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
scarb-interop = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }
sozo-ops = { git = "https://github.com/dojoengine/dojo", rev = "451951f" }

# katana
katana-runner = { git = "https://github.com/dojoengine/katana", rev = "266fb96" }

# torii
torii-broker = { path = "crates/broker" }
torii-cli = { path = "crates/cli" }
torii-graphql = { path = "crates/graphql" }
torii-proto = { path = "crates/proto" }
torii-libp2p-relay = { path = "crates/libp2p/relay" }
torii-messaging = { path = "crates/messaging" }
torii-runner = { path = "crates/runner" }
torii-server = { path = "crates/server" }
torii-sqlite = { path = "crates/sqlite/sqlite" }
torii-sqlite-types = { path = "crates/sqlite/types" }
torii-typed-data = { path = "crates/typed-data" }
torii-processors = { path = "crates/processors" }
torii-grpc-client = { path = "crates/grpc/client" }
torii-grpc-server = { path = "crates/grpc/server" }
torii-adigraphmap = { path = "crates/adigraphmap" }
torii-task-network = { path = "crates/task-network" }
torii-indexer-fetcher = { path = "crates/indexer/fetcher" }
torii-indexer = { path = "crates/indexer/engine" }
torii-storage = { path = "crates/storage" }
torii-math = { path = "crates/math" }
torii-cache = { path = "crates/cache" }
torii-controllers = { path = "crates/controllers" }

# macros
merge-options = { git = "https://github.com/dojoengine/dojo", rev = "82fe9bd" }

bitflags = "2.9.1"

anyhow = "1.0.89"
assert_matches = "1.5.0"
async-trait = "0.1.82"
base64 = "0.21.2"
camino = { version = "1.1.2", features = ["serde1"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
crypto-bigint = { version = "0.5.3", features = ["serde"] }
data-url = "0.3"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = "0.3.30"
hashlink = "0.9.1"
http = "0.2.9"
image = "0.25.2"
indexmap = "2.2.5"
metrics = "0.23.0"
num-traits = { version = "0.2", default-features = false }
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.3"
reqwest = { version = "0.11.27", features = [
	"json",
	"rustls-tls",
	"stream",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sqlx = { version = "0.8.2", features = [
	"chrono",
	"macros",
	"regexp",
	"runtime-async-std",
	"runtime-tokio",
	"sqlite",
	"uuid",
] }
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.9.0"
thiserror = "1.0.32"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = { version = "0.1.38", features = ["log"], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
# indicatif
tracing-indicatif = "0.3.9"
indicatif = "0.17.9"
terminal_size = "0.3.0"

url = { version = "2.4.0", features = ["serde"] }
# TODO: see if we still need the git version
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [
	"with-hyper-rustls",
	"with-send-sync",
] }
mime_guess = "2.0"


# server
hyper = "0.14.27"
warp = "0.3"

# gRPC
prost = "0.12"
tonic = { version = "0.11", features = [
	"gzip",
	"tls",
	"tls-roots",
	"tls-webpki-roots",
] }
tonic-build = "0.11"
tonic-reflection = "0.11"
tonic-web = "0.11"

# WASM-compatible gRPC deps
tonic-web-wasm-client = "0.6.0"
wasm-prost = { version = "0.13", package = "prost" }
wasm-tonic = { version = "0.12", default-features = false, features = [
	"codegen",
	"gzip",
	"prost",
], package = "tonic" }
wasm-tonic-build = { version = "0.12", default-features = false, features = [
	"prost",
], package = "tonic-build" }

starknet-core = "0.12.3"
starknet = "0.17.0-rc.2"
starknet-crypto = "0.7"

dashmap = "6.1.0"

# [patch.crates-io]
# cainome = { git = "https://github.com/Larkooo/cainome", branch = "patch-1" }
# cainome-cairo-serde = { git = "https://github.com/Larkooo/cainome", branch = "patch-1" }
# cainome-cairo-serde-derive = { git = "https://github.com/Larkooo/cainome", branch = "patch-1" }
