[package]
name = "torii-broker"
version.workspace = true
edition.workspace = true

[features]
default = []
redis = ["dep:redis", "dep:serde_json"]

[dependencies]
dashmap = "6.0"
futures-channel = "0.3"
futures-util = "0.3"
slab = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
torii-proto.workspace = true
serde = { version = "1.0", features = ["derive"] }

# Optional Redis support for distributed deployments
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
