[package]
name = "torii-broker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dashmap = "6.0"
futures-channel = "0.3"
futures-util = "0.3"
slab = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1" 
torii-proto.workspace = true

[dev-dependencies]
tokio-test = "0.4"
