[package]
name = "torii-cache"
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
dojo-types.workspace = true
dojo-world.workspace = true
sqlx.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
torii-math.workspace = true
torii-sqlite-types.workspace = true
serde_json.workspace = true
torii-storage.workspace = true
torii-proto.workspace = true
