[package]
edition.workspace = true
name = "torii-client"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
crypto-bigint.workspace = true
dojo-types.workspace = true
dojo-world.workspace = true
futures.workspace = true
futures-util.workspace = true
hyper = { workspace = true, features = ["client"] }
num-traits.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
tokio = { version = "1.32.0", features = ["sync"], default-features = false }
torii-grpc-client = { workspace = true }
torii-proto = { workspace = true }
url.workspace = true
