[package]
edition.workspace = true
license-file.workspace = true
name = "torii-messaging"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crypto-bigint.workspace = true
dojo-types.workspace = true
dojo-world.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
starknet.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
tokio.workspace = true
torii-sqlite.workspace = true
tracing.workspace = true
torii-storage.workspace = true
