[package]
name = "torii-processors"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
torii-sqlite.workspace = true
dojo-world.workspace = true
dojo-types.workspace = true
starknet.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
cainome.workspace = true
futures-util.workspace = true
starknet-crypto.workspace = true
lazy_static.workspace = true
base64.workspace = true
serde_json.workspace = true
cainome-cairo-serde.workspace = true
cainome-cairo-serde-derive.workspace = true
torii-task-network.workspace = true
thiserror.workspace = true
ipfs-api-backend-hyper.workspace = true
hashlink.workspace = true