[package]
name = "torii-processors"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dojo-world.workspace = true
dojo-types.workspace = true
starknet.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
cainome.workspace = true
futures-util.workspace = true
starknet-crypto.workspace = true
base64.workspace = true
serde_json.workspace = true
cainome-cairo-serde.workspace = true
cainome-cairo-serde-derive.workspace = true
torii-task-network.workspace = true
thiserror.workspace = true
ipfs-api-backend-hyper.workspace = true
hashlink.workspace = true
serde.workspace = true
reqwest.workspace = true
torii-storage.workspace = true
torii-cache.workspace = true
data-url.workspace = true
tokio-util.workspace = true
once_cell.workspace = true
torii-math.workspace = true
chrono.workspace = true
torii-proto.workspace = true
