[package]
edition.workspace = true
license-file.workspace = true
name = "torii-proto"
repository.workspace = true
version.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-prost.workspace = true
wasm-tonic.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
wasm-tonic-build.workspace = true

[features]
client = []
server = []
