[package]
edition.workspace = true
license-file.workspace = true
name = "torii-proto"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-prost.workspace = true
wasm-tonic.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
wasm-tonic-build.workspace = true

[dependencies]
crypto-bigint.workspace = true
dojo-types.workspace = true
dojo-world.workspace = true
serde.workspace = true
starknet.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

[features]
client = []
server = []
