[package]
edition.workspace = true
name = "torii-server"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
torii-mcp = { path = "../mcp" }

anyhow.workspace = true
base64.workspace = true
camino.workspace = true
chrono.workspace = true
data-url.workspace = true
http-body = "0.4.5"
http.workspace = true
hyper-reverse-proxy = { git = "https://github.com/tarrencev/hyper-reverse-proxy" }
hyper.workspace = true
image.workspace = true
indexmap.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio-util = "0.7.7"
tokio.workspace = true
torii-sqlite.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tower.workspace = true
tracing.workspace = true
warp.workspace = true
form_urlencoded = "1.2.1"
async-trait = "0.1.83"
tokio-tungstenite = "0.20.0"
hyper-tungstenite = "0.11.1"
futures-util.workspace = true
tokio-stream = "0.1.17"
uuid = { version = "1.15.1", features = ["v4"] }
regex.workspace = true
torii-processors.workspace = true
torii-storage.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
crypto-bigint.workspace = true
sha2 = "0.10"
httpdate = "1.0"
filetime = "0.2"

# TLS dependencies for HTTPS support
tokio-rustls = "0.24.1"
rustls = "0.21.12"
rustls-pemfile = "1.0.4"
