[package]
edition.workspace = true
license.workspace = true
name = "xtask-generate-test-db"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dojo-test-utils.workspace = true
dojo-utils.workspace = true
dojo-world.workspace = true
katana-runner = { git = "https://github.com/dojoengine/katana", rev = "5cb249c0fa59fa6b7c88b32557e7baf8944cdb3d" }
reqwest = { workspace = true, features = [ "json" ] }
scarb = { git = "https://github.com/dojoengine/scarb", rev = "8a60513c03e72b8a84f3ac266c61aac40c565aca" }
sozo-ops = { git = "https://github.com/dojoengine/dojo", tag = "v1.4.1" }
starknet.workspace = true
tokio.workspace = true
sozo-scarbext = { git = "https://github.com/dojoengine/dojo", tag = "v1.4.1" }
