[package]
edition.workspace = true
license.workspace = true
name = "xtask-generate-test-db"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dojo-test-utils.workspace = true
dojo-utils.workspace = true
dojo-world.workspace = true
katana-runner.workspace = true
reqwest = { workspace = true, features = [ "json" ] }
starknet.workspace = true
tokio.workspace = true
sozo-scarbext.workspace = true
scarb.workspace = true
sozo-ops.workspace = true
