[package]
edition.workspace = true
license-file.workspace = true
name = "torii-grpc-client"
repository.workspace = true
version.workspace = true

[dependencies]
dojo-types.workspace = true
futures.workspace = true
futures-util.workspace = true
num-traits.workspace = true
rayon.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
torii-sqlite = { workspace = true, optional = true }
torii-proto = { workspace = true }

crypto-bigint.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-http.workspace = true
http.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream = "0.1.14"
tonic-reflection.workspace = true
tonic-web.workspace = true

[build-dependencies]
tonic-build.workspace = true
wasm-tonic-build.workspace = true
