[package]
edition.workspace = true
license-file.workspace = true
name = "torii-grpc-server"
repository.workspace = true
version.workspace = true

[dependencies]
dojo-types.workspace = true
futures.workspace = true
futures-util.workspace = true
num-traits.workspace = true
rayon.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
torii-sqlite = { workspace = true }
torii-proto = { workspace = true, features = ["server"] }
torii-messaging = { workspace = true }

crypto-bigint.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

# server
dojo-world.workspace = true
hyper.workspace = true
rand.workspace = true
serde_json.workspace = true
tower.workspace = true
tracing.workspace = true

tower-http.workspace = true
http.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream = "0.1.14"
tonic-reflection.workspace = true
tonic-web.workspace = true
tonic.workspace = true
anyhow.workspace = true
base64.workspace = true
num_cpus = "1.16.0"
dashmap.workspace = true

[dev-dependencies]
cainome.workspace = true
camino.workspace = true
dojo-test-utils.workspace = true
dojo-utils.workspace = true
katana-runner.workspace = true
scarb.workspace = true
tempfile.workspace = true
sozo-scarbext.workspace = true
torii-indexer.workspace = true
torii-processors = { workspace = true }

[build-dependencies]
tonic-build.workspace = true
wasm-tonic-build.workspace = true
