[package]
edition.workspace = true
license-file.workspace = true
name = "torii-grpc-types"
repository.workspace = true
version.workspace = true

[dependencies]
dojo-types.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
torii-proto = { workspace = true }
crypto-bigint.workspace = true
serde.workspace = true
