[package]
description = "Torii indexer types."
edition.workspace = true
license-file.workspace = true
name = "torii-indexer-types"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
