[package]
edition.workspace = true
license-file.workspace = true
name = "torii-libp2p-client"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
serde.workspace = true
# preserve order
anyhow.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tracing = "0.1.41"
torii-proto = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
katana-runner.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.40"
wasm-timer = "0.2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [ "dns", "ed25519", "gossipsub", "identify", "macros", "noise", "ping", "quic", "tcp", "tokio", "websocket", "yamux" ], rev = "cc3271f" }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", features = [ "pem", "tokio" ], rev = "cc3271f" }
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [ "ed25519", "gossipsub", "identify", "macros", "noise", "ping", "tcp", "wasm-bindgen", "yamux" ], rev = "cc3271f" }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "cc3271f" }
libp2p-websocket-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "cc3271f" }
libp2p-webtransport-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "cc3271f" }
web-sys = { version = "0.3.77", features = [ "Window" ] }
