[package]
edition.workspace = true
license-file.workspace = true
name = "torii-libp2p-relay"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
serde.workspace = true
# preserve order
anyhow.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tracing = "0.1.41"
sqlx = { workspace = true }
torii-sqlite = { workspace = true }
dojo-types = { workspace = true }
dojo-world = { workspace = true }
rand = { workspace = true }
starknet-crypto = { workspace = true }
starknet-core = { workspace = true }
chrono = { workspace = true }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [ "dns", "ed25519", "gossipsub", "identify", "macros", "noise", "ping", "quic", "relay", "tcp", "tokio", "websocket", "yamux" ], rev = "cc3271f" }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", features = [ "pem", "tokio" ], rev = "cc3271f" }
torii-libp2p-types = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
katana-runner.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

