[package]
edition.workspace = true
license-file.workspace = true
name = "torii-libp2p-types"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
starknet.workspace = true